--- a/diagnostics/templates/diagnostics/add_patient.html
+++ b/diagnostics/templates/diagnostics/add_patient.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container mt-3">
         <h1>Add Patient</h1>
+        <p class="text-secondary pt-1 pb-2"><i>--- It might take few seconds to add a new User , Please don't click the button too many times!---</i></p>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Add Patient</button>
+            <button type="submit" class="btn btn-primary">Add User</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
