--- a/diagnostics/templates/diagnostics/add_scan.html
+++ b/diagnostics/templates/diagnostics/add_scan.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Scan for {{ diagnostic.user_name }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <div class="container mt-5">
         <h1>Add Scan for {{ diagnostic.user_name }}</h1>
@@ -34,8 +34,8 @@
                         </a>
                     </td>
                     <td>
-                        <a href="{% url 'update_scan' scan.pk %}" class="btn btn-warning btn-sm">Update</a>
-                        <a href="{% url 'delete_scan' scan.pk %}" class="btn btn-danger btn-sm">Delete</a>
+                        <a href="{% url 'update_scan' scan.pk %}" class="btn btn-warning btn-sm"><i class='far fa-edit'></i></a>
+                        <a href="{% url 'delete_scan' scan.pk %}" class="btn btn-danger btn-sm"><i class='fas fa-trash'></i></a>
                     </td>
                 </tr>
                 {% endfor %}
