--- a/diagnostics/templates/diagnostics/add_scan_existing_patient.html
+++ b/diagnostics/templates/diagnostics/add_scan_existing_patient.html
@@ -25,6 +25,7 @@
             </div>
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Add Scan</button>
+            <a href="{% url 'diagnostic_dashboard' %}" class="btn btn-secondary">Back to Dashboard</a>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
