--- a/diagnostics/templates/diagnostics/add_scan.html
+++ b/diagnostics/templates/diagnostics/add_scan.html
@@ -22,6 +22,8 @@
             <thead>
                 <tr>
                     <th>Scan</th>
+                    <th>Type</th>
+                    <th>View</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -33,6 +35,8 @@
                             <img src="{{ scan.scan.url }}" alt="Scan" style="max-width: 100px;">
                         </a>
                     </td>
+                    <td>{{ scan.type_of_scan }}</td>
+                    <td>{{ scan.view_of_scan }}</td>
                     <td>
                         <a href="{% url 'update_scan' scan.pk %}" class="btn btn-warning btn-sm"><i class='far fa-edit'></i></a>
                         <a href="{% url 'delete_scan' scan.pk %}" class="btn btn-danger btn-sm"><i class='fas fa-trash'></i></a>
@@ -40,6 +44,7 @@
                 </tr>
                 {% endfor %}
             </tbody>
+
         </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
