--- a/diagnostics/templates/diagnostics/diagnostic_dashboard.html
+++ b/diagnostics/templates/diagnostics/diagnostic_dashboard.html
@@ -127,9 +127,9 @@
     <!-- Bootstrap JS (load at the end of body) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     
-    <footer class="bg-dark text-white text-center py-3 mt-4">
-        <div class="footer-content">
-          <p>&copy; 2024 End to End BCD . All rights reserved.</p>
+    <footer class="footer mt-5 py-3 bg-dark ">
+        <div class="container text-center text-white">
+            <p class="mb-0">&copy; 2024 End to End BCD System. All rights reserved.</p>
         </div>
     </footer>
 </body>
