--- a/diagnostics/templates/diagnostics/navbar.html
+++ b/diagnostics/templates/diagnostics/navbar.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="{% url 'diagnostic_dashboard' %}">
                 <img src="{% static 'diagnostics/logo.jpeg' %}" alt="Logo" height="50" width="50">
-                <span class="fw-bold"><h1>Diagnostic Admin</h1></span>
+                <span class="fw-bold"><h1>Diagnostic Admin - BCD System</h1></span>
             </a>
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
