--- a/diagnostics/templates/diagnostics/user_login.html
+++ b/diagnostics/templates/diagnostics/user_login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}<title>User Login</title>{% endblock title %}
 {% block content %}
-
-<form class="mx-1 mx-md-4" method="post">
+<h1>User Login</h1>
+<form class="mx-1 mx-md-4 mt-4" method="post">
     {% csrf_token %}
         <div class="form-outline mb-4">
             <input type="text" id="username" name="username" class="form-control form-control-lg" />
