--- a/diagnostics/templates/diagnostics/diagnostic_detail.html
+++ b/diagnostics/templates/diagnostics/diagnostic_detail.html
@@ -6,7 +6,7 @@
     <table class="table table-bordered">
         <tr>
             <th>User ID</th>
-            <td>{{ diagnostic.user_id }}</td>
+            <td>{{ diagnostic.user_identity }}</td>
         </tr>
         <tr>
             <th>User Name</th>
